# zipurat

./: .gitignore  Cargo.toml  LICENSE  README.md  format.md
src/: archiver.rs  cli.rs  fuse.rs  index.rs  main.rs  restore.rs  serializer.rs  utils.rs
testing/: testkey.txt  testkey2.txt
