[package]
name = "zipurat"
version = "0.1.0"
edition = "2024"

[dependencies]
age = "0.11.1"
anyhow = "1.0.98"
blake3 = "1.8.2"
clap = { version = "4.5.38", features = ["derive"] }
colored = "3.0.0"
dirs = "6.0.0"
humansize = "2.1.3"
indicatif = "0.17.11"
num_cpus = "1.16.0"
openssl-sys = { version = "0.9.108", features = ["vendored"] }
rand = "0.9.1"
rand_chacha = "0.9.0"
ssh2 = "0.9.5"
zstd = { version = "0.13.3", features = ["zstdmt"] }
