[package]
name = "zipurat"
version = "0.3.0"
edition = "2024"

[dependencies]
age = "0.11.1"
anyhow = "1.0.98"
bimap = "0.6.3"
blake3 = "1.8.2"
clap = { version = "4.5.38", features = ["derive"] }
colored = "3.0.0"
dirs = "6.0.0"
fuser = { version = "0.15.1", default-features = false }
humansize = "2.1.3"
indexmap = "2.9.0"
indicatif = "0.17.11"
libc = "0.2.172"
num_cpus = "1.16.0"
openssl-sys = { version = "0.9.108", features = ["vendored"],optional=true }
rand = "0.9.1"
rand_chacha = "0.9.0"
ssh2 = "0.9.5"
zstd = { version = "0.13.3", features = ["zstdmt"] }

[features]
vendored_ssl = ["openssl-sys"]
